--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <body>
     <div class="card">
       <div class="search">
-        <input type="text" placeholder="Enter City Name" spellcheck="false" />
+        <input
+          type="text"
+          placeholder="Enter City Name"
+          spellcheck="false"
+          class="search-input"
+        />
         <button><img src="images/magnify.svg" /></button>
       </div>
       <div class="weather">
